kubernetes/apps/external-secrets/external-secrets/bitwarden/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app bitwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *app
      app.kubernetes.io/name: *app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            k8s:io.kubernetes.pod.namespace: external-secrets
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: vaultwarden
            app.kubernetes.io/name: vaultwarden
            k8s:io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.bitwarden.com
